<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/favorites_button_time"
                    android:title="@string/time" />

                <item
                    android:id="@+id/favorites_button_alphabetically_az"
                    android:title="@string/alphabetically_a_z" />

                <item
                    android:id="@+id/favorites_button_alphabetically_za"
                    android:title="@string/alphabetically_z_a" />

            </group>
        </menu>

    </item>

</menu>